--- a/physics-2-formulas.tex
+++ b/physics-2-formulas.tex
@@ -19,10 +19,8 @@
 
 \begin{document}
 
+\section{Change of coordinates}
 \begin{multicols}{2}
-
-
-    \section{Change of coordinates}
 
     \subsection{Spherical}
     \begin{equation}
@@ -51,8 +49,11 @@
     \begin{equation}
         \dd{\tau} = s \dd{s} \dd{\varphi} \dd{z}
     \end{equation}
+\end{multicols}
 
-    \section{Electric Field}
+\section{Electrostatics}
+\begin{multicols}{2}
+    \subsection{Electric Field}
 
     \textbf{Coulomb law}
     \begin{equation}
@@ -83,7 +84,7 @@
         \div \vec E = \frac{\rho}{\varepsilon_0}
     \end{equation}
 
-    \section{Potential}
+    \subsection{Potential}
 
     \textbf{Definition}
     \begin{equation}
@@ -106,7 +107,7 @@
         \oneover{4 \pi \varepsilon_0} \frac{\vec p \cdot \hat r}{r^2}
     \end{equation}
 
-    \section{Energy}
+    \subsection{Energy}
 
     \textbf{Potential energy}
     \begin{equation}
@@ -118,7 +119,7 @@
         W = \half \int_{\mathcal V} \rho V \dd \tau = \half \varepsilon_0 \int_{\R^3} E^2 \dd \tau
     \end{equation}
 
-    \section{Dipoles}
+    \subsection{Dipoles}
 
     \textbf{Ideal dipole}
     \begin{equation}
@@ -145,7 +146,7 @@
         U = - \vec p \cdot \vec E
     \end{equation}
 
-    \section{Conductors}
+    \subsection{Conductors}
 
     \textbf{Properties}
     \begin{enumerate}
@@ -155,7 +156,7 @@
         \item $V_\text{inside} = \text{const} \implies$ conductors are \emph{equipotential}.
     \end{enumerate}
 
-    \subsection{Capacitors}
+    \subsubsection{Capacitors}
 
     \textbf{Capacitance}
     \begin{equation}
@@ -187,7 +188,7 @@
         P = \frac{Q}{2 \varepsilon_0 A^2} = u
     \end{equation}
 
-    \section{Insulators}
+    \subsection{Insulators}
 
     \textbf{Bound densities}
     \begin{equation}
@@ -210,5 +211,202 @@
     \end{equation}
 
 \end{multicols}
+
+\section{Electrodynamics}
+\begin{multicols}{2}
+    \textbf{Current}
+    \begin{equation}
+        I = \dv{q}{t} = \int_\mathcal{S} \vec J \cdot \vec{\dd S}
+    \end{equation}
+
+    \textbf{Current density}
+    \begin{equation}
+        \vec J = q n \vec v_d
+    \end{equation}
+
+    \textbf{Ohm's law}
+    \begin{equation}
+        \Delta V = RI = \frac{1}{\sigma} \frac{\ell}{S} I
+    \end{equation}
+
+    \textbf{Joule's law}
+    \begin{equation}
+        P = R I ^2 = \Delta V I = \frac{\Delta V^2}{R}
+    \end{equation}
+
+    \textbf{Discharge of a capacitor}
+    \begin{equation}
+        Q(t) = Q_0 \exp(-\frac{t}{RC})
+    \end{equation}
+
+    \subsection{Kirchoff's laws}
+    \textbf{Current in a node}
+    \begin{equation}
+        \sum_{k = 1}{n} I_k = 0
+    \end{equation}
+
+    \textbf{Potential difference in loop}
+    \begin{equation}
+        \sum_{k = 1}{n} \Delta V_k = 0
+    \end{equation}
+
+    \subsection{Resistors}
+
+    \textbf{Series}
+    \begin{equation}
+        R_\text{eq} = R_1 + R_2
+    \end{equation}
+
+    \textbf{Parallel}
+    \begin{equation}
+        \oneover{R_\text{eq}} = \oneover {R_1} + \oneover {R_2}
+    \end{equation}
+\end{multicols}
+
+\section{Magnetostatic}
+\begin{multicols}{2}
+    \textbf{Lorentz force}
+    \begin{equation}
+        \vec F = q \vec v \cross \vec B
+    \end{equation}
+
+    \textbf{Force on a 1D wire}
+    \begin{equation}
+        \vec F = I \int \vec{\dd l} \cross \vec B
+    \end{equation}
+
+    \subsection{Magnetic field}
+
+    \textbf{Biot-Savart Law}
+    \begin{equation}
+        \vec B = \frac{\mu_0 I}{4 \pi} \oint_\text{circuit} \frac{\vec{\dd l}' \cross \hat{\Delta r}}{\Delta r^2}
+    \end{equation}
+
+    \textbf{Magnetic field of a wire}
+    \begin{equation}
+        \vec B = \frac{\mu_0 I}{2 \pi s} \hat \varphi
+    \end{equation}
+
+    \textbf{Magnetic field of a solenoid}
+    \begin{equation}
+        \vec B = \mu_0 n I \hat z
+    \end{equation}
+
+    \subsubsection{Ampere's law}
+    \textbf{Local form}
+    \begin{equation}
+        \curl \vec B = \mu_0 \vec J
+    \end{equation}
+
+    \textbf{Integral form}
+    \begin{equation}
+        \oint_\mathcal{C} \vec B \cdot \vec{\dd l} = \mu_0 I_\text{enc}
+    \end{equation}
+
+    \subsection{Magnetic field in matter}
+
+    \textbf{Magnetic dipole}
+    \begin{equation}
+        \vec m = I \vec S
+    \end{equation}
+
+    \textbf{Magnetization}
+    \begin{equation}
+        \vec M = \dv{\vec m}{\tau} = \chi_m \vec H
+    \end{equation}
+
+    \textbf{Bound currents}
+    \begin{equation}
+        \begin{cases}
+            \vec J_b = \curl \vec M \\
+            \vec K_b = \vec M \cross \hat n
+        \end{cases}
+    \end{equation}
+
+    \textbf{Free magnetic field}
+    \begin{equation}
+        \vec H = \frac{\vec B}{\mu_0} - \vec M
+    \end{equation}
+
+    \textbf{Ampere law in matter}
+    \begin{equation}
+        \oint_\mathcal{C} \vec H \cdot \vec{\dd l } = I^f_{\text{enc}}
+    \end{equation}
+
+    \textbf{Total magnetic field in matter}
+    \begin{equation}
+        \vec B = \mu_0(\vec H + \vec M) = \mu_0 (1 + \chi_m) \vec H = \mu_0 \mu_r \vec H
+    \end{equation}
+
+    \subsubsection{Ferromagnets}
+    $\vec B_\text{ind}$ in the \emph{same} direction of $\vec B_f$, maintained.
+    Non-linear but can approximated with $\chi_m \gg 1$.
+
+    \subsubsection{Paramagnets}
+    $\vec B_\text{ind}$ in the \emph{same} direction of $\vec B_f$, not maintained.
+    \begin{align}
+        \vec F & = \grad(\vec m \cdot \vec B) \\
+        \vec N & = \vec m \cross \vec B
+    \end{align}
+    Attracted by magnets.
+
+    \subsubsection{Diamagnets}
+    $\vec B_\text{ind}$ in the \emph{opposite} direction of $\vec B_f$, not maintained.
+    Repelled from the magnets.
+\end{multicols}
+
+\section{Maxwell's Equations}
+\begin{multicols}{2}
+    \subsection{Faraday's law}
+
+    \textbf{Integral form}
+    \begin{equation}
+        \mathcal E = - \dv{\Phi_\mathcal{S}(\vec B)}{t} = v B h
+    \end{equation}
+
+    \textbf{Local form}
+    \begin{equation}
+        \curl \vec E = - \pdv{\vec B}{t}
+    \end{equation}
+
+    \subsection{Inductance}
+    \textbf{Mutual inductance}
+    \begin{equation}
+        M = \frac{\mu_0}{4 \pi} \oint \oint \frac{\vec{\dd l_1} \cdot \vec{\dd l_2}}{\Delta r}
+    \end{equation}
+
+    \textbf{Self inductance}
+    \begin{equation}
+        \Phi(\vec B) = LI
+    \end{equation}
+
+    \textbf{Back EMF}
+    \begin{equation}
+        \mathcal E = - L \dv{I}{t}
+    \end{equation}
+
+    \textbf{Energy stored in magnetic field}
+    \begin{equation}
+        W = \half L I ^2 = \frac{1}{2 \mu_0} \int_{\R^3} B^2 \dd \tau
+    \end{equation}
+
+    \subsection{Maxwell's equations}
+
+    \textbf{Maxwell's equations}
+    \begin{equation}
+        \begin{cases}
+            \div \vec E = \frac{\rho}{\varepsilon_0}                          \\
+            \div \vec B = 0                                                   \\
+            \curl \vec E = -\pdv{\vec B}{t}                                   \\
+            \curl \vec B = \mu_0 \vec J + \mu_0 \varepsilon_0 \pdv{\vec E}{t} \\
+        \end{cases}
+    \end{equation}
+
+    \textbf{Lorentz force}
+    \begin{equation}
+        F = q(\vec E + \vec v \cross \vec B)
+    \end{equation}
+\end{multicols}
+
 \end{document}
 
